--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -2,6 +2,7 @@
 $color-brand: #6190e8;
 $color-brand-light: #89acee;
 $color-brand-dark: #4e73ba;
+$color-grey: #ACA4A4;
 
 // taro-ui 请按需引入需要的样式
 @import "~taro-ui/dist/style/components/button.scss";
