--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -2,12 +2,17 @@
 $color-brand: #6190e8;
 $color-brand-light: #89acee;
 $color-brand-dark: #4e73ba;
-$color-grey: #ACA4A4;
+$color-grey: #F5F5F5;
+$color-status: #454166;
 
 // taro-ui 请按需引入需要的样式
 @import "~taro-ui/dist/style/components/button.scss";
 @import "~taro-ui/dist/style/components/activity-indicator.scss";
 @import '~taro-ui/dist/style/components/loading.scss';
+@import "~taro-ui/dist/style/components/progress.scss";
+@import "~taro-ui/dist/style/components/icon.scss";
+@import "~taro-ui/dist/style/components/search-bar.scss";
+@import "~taro-ui/dist/style/components/tabs.scss";
 
 $h1: 42px;
 $h2: 36px;
