--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -5,6 +5,8 @@ $color-brand-dark: #4e73ba;
 $color-grey: #F5F5F5;
 $color-status: #454166;
 
+$font-color: #353535;
+
 // taro-ui 请按需引入需要的样式
 @import "~taro-ui/dist/style/components/button.scss";
 @import "~taro-ui/dist/style/components/activity-indicator.scss";
