--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -6,6 +6,7 @@ $color-grey: #F5F5F5;
 $color-status: #454166;
 
 $font-color: #353535;
+$font-tips-color: #707070;
 
 // taro-ui 请按需引入需要的样式
 @import "~taro-ui/dist/style/components/button.scss";
