feat: [chong] #7 update ui color

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,12 +1,15 @@
 /* Custom Theme */
-$color-brand: #6190e8;
-$color-brand-light: #89acee;
-$color-brand-dark: #4e73ba;
+$color-brand: #f1dfa2;
+$color-brand-light: #f5e7b9;
+$color-brand-dark: #c1b282;
 $color-grey: #F5F5F5;
 $color-status: #454166;
 
-$font-color: #353535;
+$font-color: #1a1515;
 $font-tips-color: #707070;
+$font-link-color: #598BFF;
+
+$color-text-base-inverse: #353535;
 
 // taro-ui 请按需引入需要的样式
 @import "~taro-ui/dist/style/components/button.scss";
