--- a/src/pages/detail/donator/detail-preparation/index.scss
+++ b/src/pages/detail/donator/detail-preparation/index.scss
@@ -8,7 +8,7 @@ Page {
 .detail-preparation {
   height: 100%;
   background-color: white;
-  padding: 12px 38px 0 38px;
+  padding: 28px 38px 0 38px;
   font-size: 28px;
   position: relative;
 
@@ -48,15 +48,25 @@ Page {
     }
   }
 
+  // .btn {
+  //   // position: absolute;
+  //   // left: 150px;
+  //   // right: 150px;
+  //   // bottom: 72px;
+  //   margin-top: 91px;
+  //   padding-left: 150px;
+  //   padding-right: 150px;
+  //   padding-bottom: 72px;
+  // }
   .btn {
-    // position: absolute;
-    // left: 150px;
-    // right: 150px;
-    // bottom: 72px;
-    margin-top: 91px;
-    padding-left: 150px;
-    padding-right: 150px;
-    padding-bottom: 72px;
+    position: fixed;
+    left: 150px;
+    right: 150px;
+    bottom: 72px;
+  }
+
+  .occupy-position {
+    height: 160px;
   }
 }
 
